This commit activates, configures, and implements checkstyle
Although present, checkstyle was not used yet.
To use it, checkstyle activated and the following
configuration changes have been made:
* Rename `checkstyle-supressions.xml` to `suppressions.xml`
  to be in line with the gradle docu
* Disable the `SuppressionXpathFilter` since it is not used
* Enable the SuppressionFilter and pass it correct path to
  the suppression file (`suppresions.xml`)
* Add `BeforeExecutionExclusionFileFilter` for the files
  which contain code which can not be parsed by checkstyle
  (mostly Java 14 things)
Additionally, the project was brought in line with the
checkstyle requirements

Signed-off-by: Anton Oellerer <a.oellerer@docu-tools.com>